fix: fixed scrolling table head bugs on mobile, removed transitions due to bugginess

--- a/src/css/table-head.css
+++ b/src/css/table-head.css
@@ -27,3 +27,9 @@
         width: 67vw;
     }
 }
+
+@media (max-width: 797px) {
+    .scrolling-head {
+        display: none;
+    }
+}
